--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "site",
+  "name": "site",
     "version": "0.0.1",
     "description": "",
     "scripts": {
@@ -8,12 +8,12 @@
     },
     "author": "GVM",
     "license": "MIT",
-    "dependencies": {
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "mssql": "^7.1.3",
-        "mysql2": "^2.2.5",
-        "nodemon": "^2.0.7",
-        "path": "^0.12.7"
-      }
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.17.1",
+    "mysql2": "^3.9.4",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7"
+  }
 }
